<resources>
    <string name="app_name">SashaCakes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="Save">Сохранить</string>

    <string name="Empty"> </string>

    <string name="Quantity">0</string>
    <string name="Minus">-</string>
    <string name="Plus">+</string>
    <string name="Order">Заказать</string>

    <string name="Send_Order">Заказать</string>
    <string name="Basket_Empty">Корзина пуста</string>

    <!-- Продукция для сипска -->
    <string-array name="list_menu">
        <item> Капкейк </item>
        <item> Торт </item>
        <item> Детский торт </item>
        <item> Торт для мужчины </item>
        <item> Чизкейк </item>
        <item> Ярустный торт </item>
        <item> Медовик </item>
        <item> Зефир </item>
        <item> Кейк-попсы </item>
        <item> Вафельные трубочки </item>
        <item> Пирожное картошка </item>
        <item> Торт птичье молоко </item>
    </string-array>

    <!-- Меню -->
    <string name="Delivery_title">Условия доставки</string>
    <string name="AboutMe_title">Мои данные</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Для формы "инфа о клиенте" -->
    <string name="Name">Имя</string>
    <string name="Telephone">Телефон</string>
    <string name="Email">Электронная почта</string>
    <string name="Street">Улица</string>
    <string name="Home">Дом, корпус, квартира</string>

    <!-- Продукция -->
    <string name="Name_cupcake">Капкейк</string>
    <string name="About_cupcake">Капкейк — это, буквально, чашечный торт (cup cake). Миниатюрный тортик на несколько укусов. В его основе лежит нежнейший бисквит, яркая домашняя начинка, а завершает нежнейшая "шапка" из воздушного сырно-сливочного крема и свежих ягод. Капкейки — это приятный подарок близкому и прекрасное дополнение к любому праздничному столу. Капкейки — это идеальное решение, как отдельное пирожное каждому гостю, так и дополнение к праздничному торту, выполненному в одной цветовой гамме. Про капкейки можно сказать: "все гениальное — просто"!</string>
    <string name="Price_cupcake">150</string>

    <string name="Name_cake">Торт</string>
    <string name="About_cake">Торт, сделанный на заказ, станет неотъемлемой частью Вашего праздника, он послужит украшением стола, произведет впечатление и останется в памяти дорогих гостей. Каждый торт — это индивидуальная работа, обговоренная до мелочей. Вам понравится не только его наружное оформление, но и внутренние богатый мир. При выполнении заказа, мы учитываем все Ваши пожелания, находим лучшие сочетания, добавляем нотку креатива и щедрую горсть нашей любви. Каждый торт, произведенный для Вас, сделан с душой, отдавая его Вам, мы волнуемся не меньше Вашего, чтобы он понравился абсолютно всем и каждому. Мы не просто печем сладости, мы делаем Ваш праздник незабываемым!</string>
    <string name="Price_cake">1600</string>


    <string name="Name_childrens_cake">Детский торт</string>
    <string name="About_childrens_cake">Торт, сделанный на заказ, станет неотъемлемой частью Вашего праздника, он послужит украшением стола, произведет впечатление и останется в памяти дорогих гостей. Каждый торт — это индивидуальная работа, обговоренная до мелочей. Вам понравится не только его наружное оформление, но и внутренние богатый мир. При выполнении заказа, мы учитываем все Ваши пожелания, находим лучшие сочетания, добавляем нотку креатива и щедрую горсть нашей любви. Каждый торт, произведенный для Вас, сделан с душой, отдавая его Вам, мы волнуемся не меньше Вашего, чтобы он понравился абсолютно всем и каждому. Мы не просто печем сладости, мы делаем Ваш праздник незабываемым!</string>
    <string name="Price_childrens_cake">1600</string>

    <string name="Name_cheesecake">Чизкейк</string>
    <string name="About_cheesecake">Воздушный, нежный, тает во рту, как мороженое, при этом абсолютно не приторный, с тонкой ноткой кислинки. В нем 60  творога и 30 домашнего йогурта! И почти нет сахара. Тончайшая песочная основа идеально дополняет это белое воздушное облако счастья!</string>
    <string name="Price_cheesecake">2100</string>

    <string name="Name_cakepigeonsmilk">Торт "Птичье молоко"</string>
    <string name="About_cakepigeonsmilk">Торт с удивительным названием «Птичье молоко» — любимый сладкий десерт из детства. Кто из нас не любил откусывать маленькими кусочками нежное белое суфле, покрытое вкуснейшим шоколадом?</string>
    <string name="Price_cakepigeonsmilk">1600</string>

    <string name="Name_tieredcake">Ярусный торт</string>
    <string name="About_tieredcake">Торт, сделанный на заказ, станет неотъемлемой частью Вашего праздника, он послужит украшением стола, произведет впечатление и останется в памяти дорогих гостей. Каждый торт — это индивидуальная работа, обговоренная до мелочей. Вам понравится не только его наружное оформление, но и внутренние богатый мир. При выполнении заказа, мы учитываем все Ваши пожелания, находим лучшие сочетания, добавляем нотку креатива и щедрую горсть нашей любви. Каждый торт, произведенный для Вас, сделан с душой, отдавая его Вам, мы волнуемся не меньше Вашего, чтобы он понравился абсолютно всем и каждому. Мы не просто печем сладости, мы делаем Ваш праздник незабываемым!</string>
    <string name="Price_tieredcake">1600</string>

    <string name="Name_honey_cake">Медовик</string>
    <string name="About_honey_cake">Вкусный, нежный, ароматный и совсем не приторный десерт, который с удовольствием отведают даже тот, кто не любит мед. Торт Медовый – мечта, которая легко сбывается при помощи несложных манипуляций и нескольких простых ингредиентов. Главным героем здесь выступает мед – полезный, вкусный и лечебный продукт. Его нужно добавить в тесто совсем немного — всего лишь пару столовых ложек, а результат потрясающий.</string>
    <string name="Price_honey_cake">2100</string>

    <string name="Name_zephyr">Зефир</string>
    <string name="About_zephyr">Зефир — не только аппетитное, но еще и полезное для здоровья лакомство. Польза и вред зефира оценена не только сладкоежками, но также и специалистами-диетологами. Его можно без опаски давать детям — от его употребления у них не будут разрушаться зубы и не возникнет кариес.</string>
    <string name="Price_zephyr">450</string>

    <string name="Name_cakepops">Кейк-попсы</string>
    <string name="About_cakepops">Что это за чудо, скажите вы? Кейк-попс- это лакомство на палочке, которое понравится абсолютно всем, равнодушных не останется точно. Кейк-попсы идеальная сладость для детского и свадебного кэнди-бара. Шоколадная или ванильная основа по типу нашей любимой "Картошки", окутанная в благородный бельгийский шоколад и красиво оформлена цветными посыпками на любой цвет и вкус. Кейк-попс -это все и сразу в одном удобном решении)</string>
    <string name="Price_cakepops">80</string>

    <string name="Name_waferrolls">Вафельные трубочки</string>
    <string name="About_waferrolls">Вафельные трубочки — рецепт, который мы любим с детства. Ради вафельных трубочек даже был придуман специальный агрегат — электровафельница, и написан специальный рецепт вафельных трубочек для электровафельницы.</string>
    <string name="Price_waferrolls">450</string>

    <string name="Name_potatocake">Пирожное "Картошка"</string>
    <string name="About_potatocake">Я делаю пирожное "картошка" не по классическому рецепту, а оочень шоколадному, насыщенному! Вы бы знали какой аромат исходит от коробочки с ними! И вообще это прекрасный подарок близкому!</string>
    <string name="Price_potatocake">100</string>

    <string name="Name_cakeformen">Торт для мужчин</string>
    <string name="About_cakeformen">Если Вы думаете, что сильная половина человечества не любит сладкого, Вас сильно ввели в заблуждение! Мало того, что мужчины еще те сладкоежки, они еще и очень требовательны в этом вопросе. Тут нужно сильно постараться, чтобы внутреннее богатство торта совпало с внешним сдержанным украшением и произвело впечатление. Если у Вас есть свои идеи-мы обязательно их воплотим, если понравились наши работы- выполним их с большим удовольствием, учтем все пожелания и непременно добавим "перчинки" для именинника</string>
    <string name="Price_cakeformen">1600</string>

    <!-- Элементы для построения списка -->
    <string name="Delete">X</string>

    <!-- Элементы для BottomNavigationView -->
    <string name="Delivery">Доставка</string>
    <string name="Menu">Меню</string>
    <string name="About_me">Мои контакты</string>
    <string name="Basket">Корзина</string>
    <string name="Call">Связаться с нами</string>

    <!-- Служебные значения для невидимых полей -->
    <string name="Text_for_invisible_TV">Text</string>
    <string name="Text_for_invisible_BV">Button</string>

    <!-- Для корзины-->
    <string name="Sum_order">Итого:</string>
    <string name="rub"> руб.</string>


</resources>
