<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bn_call"
        android:enabled="true"
        android:icon="@drawable/call"
        android:title="@string/Call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bn_menu"
        android:enabled="true"
        android:title="@string/Menu"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_more" />
    <item
        android:id="@+id/bn_basket"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/Basket"
        app:actionViewClass="android.widget.TextView"
        app:showAsAction="ifRoom" />


</menu>