<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior=".BottomNavigationViewBehavior_NH"
    tools:context="ru.lizzzi.sashacakes.Basket">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_basket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/basket_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Basket_Empty" />

    <TableLayout
        android:id="@+id/basket_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/layout_marginStart"
                    android:text="@string/Sum_order"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="@dimen/text_price"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sum_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/textView10"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_price"
                    android:textStyle="bold"
                    tools:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="false"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/sum_order"
                    android:gravity="center|start"
                    android:text="@string/rub"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_price"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <Button
                android:id="@+id/send_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="22dp"
                android:layout_weight="0"
                android:backgroundTint="@color/white"
                android:text="@string/Send_Order"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                tools:ignore="ContentDescription,UnusedAttribute" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ru.lizzzi.sashacakes.entity.IconView
                    android:id="@+id/navigation_item_iconView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignTop="@+id/navigation_item_badgeView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter" />

                <ru.lizzzi.sashacakes.entity.LabelView
                    android:id="@+id/navigation_item_labelView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/navigation_item_iconView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="2dp"
                    android:paddingBottom="2dp"
                    android:textSize="16sp"
                    tools:text="text" />

                <ru.lizzzi.sashacakes.entity.BadgeView
                    android:id="@+id/navigation_item_badgeView"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="false"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_toEndOf="@+id/navigation_item_iconView"
                    android:background="@drawable/navigation_badge_background"
                    android:gravity="center"
                    android:textColor="@color/navigation_badge_text_color"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    tools:text="12" />

            </RelativeLayout>
        </TableRow>

    </TableLayout>

</android.support.design.widget.CoordinatorLayout>
