<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="ru.lizzzi.sashacakes.ItemFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/LayoutStand">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_item"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/Empty"
                android:scaleType="centerInside"
                android:src="@drawable/ic_menu_manage" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03" />

            <TextView
                android:id="@+id/name_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_header_level1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/about_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.03" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/price_item"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center"
                        tools:text="0000"
                        android:textSize="@dimen/text_normal"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/layout_marginStart"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/rub"
                        android:textSize="@dimen/text_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView27"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Text_for_invisible_TV"
                        android:visibility="invisible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/minus"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/minus_item2"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/Quantity"
                        android:textSize="@dimen/text_normal"
                        android:textStyle="bold"/>

                    <ImageButton
                        android:id="@+id/plus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/plus_item2"
                        tools:ignore="ContentDescription" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:text="@string/Text_for_invisible_TV"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/textView28"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Text_for_invisible_TV"
                        android:visibility="invisible" />

                    <ImageButton
                        android:id="@+id/sendorder"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        app:srcCompat="@drawable/basket_item_little"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:text="@string/Text_for_invisible_TV"
                        android:visibility="invisible" />

                </TableRow>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>

